<resources>
    <string name="app_name">CampusConnect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="options_array">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <item>Option 4</item>
        <item>Option 5</item>
    </string-array>

    <string name="spinner_hint">Select an option</string>
    <string name="event_name">Event Name</string>
    <string name="event_id">Event ID</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_location">Event Location</string>
    <string name="event_organier">Event Organier</string>
    <string name="event_capacity">Event Capacity</string>
    <string name="event_type">Event Type</string>
    <string name="event_description">Event Description</string>
    <string name="event_flyer">Event Flyer</string>
    <string name="update_data">Update Data</string>
    <string name="event_icon">Event Icon</string>
    <string name="loading_data">Loading Data.....</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="event_temperature">Event Temperature</string>
    <string name="_55">55</string>
</resources>